fix(desktop): fix homepage list scrolling overflow (#540)

--- a/desktop/renderer-app/src/pages/HomePage/HomePage.less
+++ b/desktop/renderer-app/src/pages/HomePage/HomePage.less
@@ -1,6 +1,8 @@
 .homepage-layout-container {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    overflow: hidden;
 }
 
 .homepage-layout-content {
